--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -11,6 +11,10 @@
     }
 }
 
+.gif {
+    height: 300px;
+}
+
 .productos{
     margin: 0 auto;
     display: flex;
@@ -18,7 +22,8 @@
     .imagenProductos{
         padding: 15px;
         img{
-            width: 100%;
+            height: 300px;
+            width: 500px;
         }
     }
     .textoProductos{
@@ -156,4 +161,9 @@
 
 .disabled {
     display: none;
+}
+
+.buscador{
+    padding: 10px;
+    margin: 20px;
 }
