--- a/estilos/style.css
+++ b/estilos/style.css
@@ -26,7 +26,7 @@
 }
 
 .carrito-producto-imagen {
-  width: 4rem;
+  width: 5rem;
   border-radius: 0.5rem;
 }
 
@@ -62,7 +62,7 @@
 }
 
 .carrito-acciones-total {
-  width: 15rem;
+  width: 12rem;
   justify-content: center;
   align-items: center;
   display: flex;
@@ -84,6 +84,10 @@
   cursor: pointer;
   border-top-right-radius: 1rem;
   border-bottom-right-radius: 1rem;
+}
+
+.carrito-producto-titulo {
+  max-width: 15rem;
 }
 
 .tituloGeneral {
@@ -134,7 +138,7 @@ body.dark .productos .textoProductos {
 }
 
 .btnCompra {
-  background-color: rgb(28, 58, 156);
+  background-color: rgb(71, 101, 199);
   color: rgb(224, 224, 224);
   border: none;
   font-size: 20px;
@@ -166,6 +170,11 @@ body.dark .productos .textoProductos {
   margin: 20px;
 }
 
+.menu2 {
+  padding: 10px;
+  background-color: rgb(71, 101, 199);
+}
+
 /* 
 font-family: 'Merriweather Sans', sans-serif;
 font-family: 'Open Sans', sans-serif;
@@ -179,10 +188,6 @@ font-family: 'Ubuntu', sans-serif;
 
 html {
   scroll-behavior: smooth;
-}
-
-section[id] {
-  scroll-padding-top: 70px;
 }
 
 body {
@@ -499,12 +504,10 @@ body.dark .footerContainer .grupo1 .cajaFooter .parrafoFooter {
 }
 .menu2 {
   display: flex;
+  justify-content: space-around;
+  align-items: center;
   flex-wrap: wrap;
   list-style: none;
-  align-items: center;
-}
-.menu2 li {
-  padding: 5px 5px;
 }
 
 .form_container {
@@ -610,4 +613,110 @@ body.dark .footerContainer .grupo1 .cajaFooter .parrafoFooter {
   width: 100%;
   padding: 10px 0;
   border-radius: 10px;
+}
+
+.hidden {
+  overflow: hidden;
+}
+
+.centrado {
+  height: 100vh;
+  background-color: #303030;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.lds-spinner {
+  color: official;
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+
+.lds-spinner div {
+  transform-origin: 40px 40px;
+  animation: lds-spinner 1.2s linear infinite;
+}
+
+.lds-spinner div:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  top: 3px;
+  left: 37px;
+  width: 6px;
+  height: 18px;
+  border-radius: 20%;
+  background: #fff;
+}
+
+.lds-spinner div:nth-child(1) {
+  transform: rotate(0deg);
+  animation-delay: -1.1s;
+}
+
+.lds-spinner div:nth-child(2) {
+  transform: rotate(30deg);
+  animation-delay: -1s;
+}
+
+.lds-spinner div:nth-child(3) {
+  transform: rotate(60deg);
+  animation-delay: -0.9s;
+}
+
+.lds-spinner div:nth-child(4) {
+  transform: rotate(90deg);
+  animation-delay: -0.8s;
+}
+
+.lds-spinner div:nth-child(5) {
+  transform: rotate(120deg);
+  animation-delay: -0.7s;
+}
+
+.lds-spinner div:nth-child(6) {
+  transform: rotate(150deg);
+  animation-delay: -0.6s;
+}
+
+.lds-spinner div:nth-child(7) {
+  transform: rotate(180deg);
+  animation-delay: -0.5s;
+}
+
+.lds-spinner div:nth-child(8) {
+  transform: rotate(210deg);
+  animation-delay: -0.4s;
+}
+
+.lds-spinner div:nth-child(9) {
+  transform: rotate(240deg);
+  animation-delay: -0.3s;
+}
+
+.lds-spinner div:nth-child(10) {
+  transform: rotate(270deg);
+  animation-delay: -0.2s;
+}
+
+.lds-spinner div:nth-child(11) {
+  transform: rotate(300deg);
+  animation-delay: -0.1s;
+}
+
+.lds-spinner div:nth-child(12) {
+  transform: rotate(330deg);
+  animation-delay: 0s;
+}
+
+@keyframes lds-spinner {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }/*# sourceMappingURL=style.css.map */
