--- a/sass/_carrito.scss
+++ b/sass/_carrito.scss
@@ -25,7 +25,7 @@
 }
 
 .carrito-producto-imagen {
-    width: 4rem;
+    width: 5rem;
     border-radius: .5rem;
 }
 
@@ -61,7 +61,7 @@
 }
 
 .carrito-acciones-total {
-    width: 15rem;
+    width: 12rem;
     justify-content: center;
     align-items: center;
     display: flex;
@@ -83,4 +83,8 @@
     cursor: pointer;
     border-top-right-radius: 1rem;
     border-bottom-right-radius: 1rem;
+}
+
+.carrito-producto-titulo {
+    max-width: 15rem;
 }
