--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -83,3 +83,15 @@
     padding: 10px;
     background-color: $switch-primary-color;
 }
+
+
+h5, p {
+    margin: 10px;
+    padding: 5px;
+    text-align: center;
+    background-color: $theme-color2;
+}
+
+.card-text {
+    color: $switch-text-color;
+}
